--- a/_sass/post.sass
+++ b/_sass/post.sass
@@ -34,5 +34,6 @@
 
 .post__container
   grid-column: 1/9
+  max-width: 100%
 .container_full-width
   grid-column: 1/13
