--- a/_sass/syntax-highlight.sass
+++ b/_sass/syntax-highlight.sass
@@ -9,7 +9,7 @@
         font-size: $code__text_size
         font-family: $code__text_font
     pre.highlight
-        max-width: 90vw
+        max-width: 99%
         max-height: 30rem
         overflow: auto
         word-wrap: normal
